fix : DetailMenuModal z-index to 100

--- a/src/components/modals/detailMenuModal.module.css
+++ b/src/components/modals/detailMenuModal.module.css
@@ -4,7 +4,7 @@
     justify-content: center;
     align-items: center;
     background-color: rgba(0,0,0, 0.2);
-    z-index: 2;
+    z-index: 100;
     top: 0;
     right: 0;
     left: 0;
